--- a/server/package.json
+++ b/server/package.json
@@ -20,5 +20,15 @@
   "bugs": {
     "url": "https://github.com/Amr006/Final.Project_BS/issues"
   },
-  "homepage": "https://github.com/Amr006/Final.Project_BS#readme"
+  "homepage": "https://github.com/Amr006/Final.Project_BS#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "helmet": "^7.0.0",
+    "mongoose": "^7.4.2"
+  }
 }
