--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2"
   }
 }
