--- a/server/package.json
+++ b/server/package.json
@@ -39,12 +39,14 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0",
     "validator": "^13.11.0",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "xss-clean": "^0.1.4"
   }
 }
