--- a/server/package.json
+++ b/server/package.json
@@ -35,12 +35,16 @@
     "express-rate-limit": "^6.9.0",
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
+    "hpp": "^0.2.3",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
