--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.10",
+    "react-dropzone": "^14.2.3",
     "react-easy-emoji": "^1.8.1",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^8.1.2",
