--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,7 @@
     "react-drag-drop-files": "^2.3.10",
     "react-dropzone": "^14.2.3",
     "react-easy-emoji": "^1.8.1",
+    "react-image": "^4.1.0",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
