--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "react-masonry-css": "^1.0.16",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "yup": "^1.2.0"
