--- a/client/package.json
+++ b/client/package.json
@@ -49,9 +49,12 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.14",
+    "@babel/preset-react": "^7.22.5",
     "@testing-library/dom": "^9.3.1",
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4"
   }
