--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/Amr006/Final.Project_BS#readme",
   "dependencies": {
+    "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.40.0",
@@ -38,7 +39,6 @@
     "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "hpp": "^0.2.3",
-    "i": "^0.3.7",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
