--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "formik": "^2.4.3",
     "jest-styled-components": "^7.1.1",
     "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
     "next": "13.4.13",
     "prettier": "^3.0.2",
     "react": "18.2.0",
@@ -39,6 +40,7 @@
     "react-drag-drop-files": "^2.3.10",
     "react-dropzone": "^14.2.3",
     "react-easy-emoji": "^1.8.1",
+    "react-icons": "^4.11.0",
     "react-image": "^4.1.0",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^8.1.2",
