--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@react-three/fiber": "^8.14.1",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
@@ -28,6 +29,8 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "formik": "^2.4.3",
+    "framer-motion": "^10.16.4",
+    "framer-motion-3d": "^10.16.4",
     "jest-styled-components": "^7.1.1",
     "js-cookie": "^3.0.5",
     "moment": "^2.29.4",
@@ -47,6 +50,7 @@
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
+    "three": "^0.156.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
