--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "css-mediaquery": "^0.1.2",
     "dotenv": "^16.3.1",
     "emoji-mart": "^5.5.2",
     "eslint": "8.46.0",
