--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-toastify": "^9.1.3",
+    "socket.io": "^4.7.2",
     "styled-components": "^5.3.11",
     "yup": "^1.2.0"
   },
